# serializer version: 1
# name: test_command_delete[False-False-False-False]
  '''
  This action will delete following hikes:
  
                                    Hikes                                   
                                                                            
    ID   Date         Name         GPX   ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────────────── 
     2   2016-05-22   Gina Lynch     ✗   17.8   2732   3346   03:28   5.12  
     1   2023-06-01   Paul Diaz      ✗   17.4   3268   2652   03:50   4.53  
                                                                            
  Aborting
  
  '''
# ---
# name: test_command_delete[False-False-False-True]
  '''
  This action will delete following hikes:
  
                                     Hikes                                   
                                                                             
    ID   Date         Name          GPX   ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ───────────────────────────────────────────────────────────────────────── 
     2   2016-05-22   Gina Lynch      ✗   17.8   2732   3346   03:28   5.12  
     1   2023-06-01   Paul Diaz       ✗   17.4   3268   2652   03:50   4.53  
     3   2025-03-05   John Rhodes     ✗   14.9   2452    733   03:17   4.55  
                                                                             
  Aborting
  
  '''
# ---
# name: test_command_delete[False-False-True-False]
  '''
  This action will delete following hikes:
  
                                    Hikes                                   
                                                                            
    ID   Date         Name         GPX   ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────────────── 
     2   2016-05-22   Gina Lynch     ✗   17.8   2732   3346   03:28   5.12  
     1   2023-06-01   Paul Diaz      ✗   17.4   3268   2652   03:50   4.53  
                                                                            
  
  '''
# ---
# name: test_command_delete[False-False-True-True]
  '''
  This action will delete following hikes:
  
                                     Hikes                                   
                                                                             
    ID   Date         Name          GPX   ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ───────────────────────────────────────────────────────────────────────── 
     2   2016-05-22   Gina Lynch      ✗   17.8   2732   3346   03:28   5.12  
     1   2023-06-01   Paul Diaz       ✗   17.4   3268   2652   03:50   4.53  
     3   2025-03-05   John Rhodes     ✗   14.9   2452    733   03:17   4.55  
                                                                             
  
  '''
# ---
# name: test_command_delete[True-False-False-False]
  '''
  This action will delete following hikes:
  
                                    Hikes                                   
                                                                            
    ID   Date         Name         GPX   ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────────────── 
     2   2016-05-22   Gina Lynch     ✗   17.8   2732   3346   03:28   5.12  
     1   2023-06-01   Paul Diaz      ✗   17.4   3268   2652   03:50   4.53  
                                                                            
  
  '''
# ---
# name: test_command_delete[True-False-False-True]
  '''
  This action will delete following hikes:
  
                                     Hikes                                   
                                                                             
    ID   Date         Name          GPX   ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ───────────────────────────────────────────────────────────────────────── 
     2   2016-05-22   Gina Lynch      ✗   17.8   2732   3346   03:28   5.12  
     1   2023-06-01   Paul Diaz       ✗   17.4   3268   2652   03:50   4.53  
     3   2025-03-05   John Rhodes     ✗   14.9   2452    733   03:17   4.55  
                                                                             
  
  '''
# ---
# name: test_command_delete[True-False-True-False]
  '''
  This action will delete following hikes:
  
                                    Hikes                                   
                                                                            
    ID   Date         Name         GPX   ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────────────── 
     2   2016-05-22   Gina Lynch     ✗   17.8   2732   3346   03:28   5.12  
     1   2023-06-01   Paul Diaz      ✗   17.4   3268   2652   03:50   4.53  
                                                                            
  
  '''
# ---
# name: test_command_delete[True-False-True-True]
  '''
  This action will delete following hikes:
  
                                     Hikes                                   
                                                                             
    ID   Date         Name          GPX   ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ───────────────────────────────────────────────────────────────────────── 
     2   2016-05-22   Gina Lynch      ✗   17.8   2732   3346   03:28   5.12  
     1   2023-06-01   Paul Diaz       ✗   17.4   3268   2652   03:50   4.53  
     3   2025-03-05   John Rhodes     ✗   14.9   2452    733   03:17   4.55  
                                                                             
  
  '''
# ---
# name: test_command_export_with_ids
  list([
    dict({
      'body': 'Owner candidate condition which central. Owner support record upon election. Pattern pick camera benefit. Poor health purpose practice.',
      'date': '2023-06-01',
      'distance': 17.43,
      'duration': 231,
      'elevation_gain': 3268,
      'elevation_loss': 2652,
      'gpx_file': None,
      'id': 1,
      'name': 'Paul Diaz',
    }),
    dict({
      'body': 'Summer best manager up. Without hit science onto practice federal. Fight type street.',
      'date': '2016-05-22',
      'distance': 17.8,
      'duration': 208,
      'elevation_gain': 2732,
      'elevation_loss': 3346,
      'gpx_file': None,
      'id': 2,
      'name': 'Gina Lynch',
    }),
    dict({
      'body': 'International music call field door prove. Hit treat garden become a art. Like learn short present store choose deep.',
      'date': '2025-03-05',
      'distance': 14.95,
      'duration': 197,
      'elevation_gain': 2452,
      'elevation_loss': 733,
      'gpx_file': None,
      'id': 3,
      'name': 'John Rhodes',
    }),
  ])
# ---
# name: test_command_import
  list([
    '1',
    '1970-01-01',
    'endorsement hike',
    '✗',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_import.1
  list([
    '2',
    '1970-01-02',
    'abnegation hike',
    '✗',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_import.2
  list([
    '3',
    '1970-01-03',
    'depositor hike',
    '✗',
    '7.4',
    '1029',
    '54',
    '02:45',
    '2.69',
  ])
# ---
# name: test_command_import.3
  list([
    '4',
    '1970-01-04',
    "adrenaline's hike",
    '✗',
    '6.6',
    '420',
    '420',
    '02:00',
    '3.30',
  ])
# ---
# name: test_command_import.4
  list([
    '5',
    '1970-01-05',
    "shooter's hike",
    '✗',
    '5.0',
    '288',
    '288',
    '01:50',
    '2.73',
  ])
# ---
# name: test_command_import_update[False]
  list([
    '1',
    '2022-02-26',
    'abnegation hike',
    '✗',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_import_update[False].1
  None
# ---
# name: test_command_import_update[True]
  list([
    '1',
    '2022-02-26',
    'abnegation hike',
    '✓',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_import_update[True].1
  GPX(waypoints=[GPXWaypoint(45.772163216, 14.357652292, name='Name 1', description='Desc 1', symbol='Flag, Blue', comment='Comment 1'), GPXWaypoint(45.757933259, 14.294899916, elevation=-0.11438, name='Name 2', description='Desc 2', symbol='Flag, Blue', comment='Comment 2'), GPXWaypoint(45.735199945, 14.377516648, elevation=-0.11438, name='Name 3', description='Desc 3', symbol='Flag, Blue', comment='Comment 3')], tracks=[GPXTrack(name='Track 1', segments=[GPXTrackSegment(points=[...])]), GPXTrack(name='Track 2', segments=[GPXTrackSegment(points=[...])])])
# ---
# name: test_command_show_detail[False-False-False]
  '''
                 Paul Diaz                
   ────────────────────────────────────── 
    ID            1                       
    Date          2023-06-01              
    GPX           ✗                       
    ➡ km          17.4                    
    ⬈ m           3268                    
    ⬊ m           2652                    
    ⏱             03:50                   
    km/h          4.53                    
   ────────────────────────────────────── 
  
  Owner candidate condition which central. Owner support record upon election.    
  Pattern pick camera benefit. Poor health purpose practice.                      
  
  No *.gpx-file available
  
  
  '''
# ---
# name: test_command_show_detail[True-False-False]
  '''
                 Paul Diaz                
   ────────────────────────────────────── 
    ID            1                       
    Date          2023-06-01              
    GPX           ✓                       
    ➡ km          17.4                    
    ⬈ m           3268                    
    ⬊ m           2652                    
    ⏱             03:50                   
    km/h          4.53                    
   ────────────────────────────────────── 
  
  Owner candidate condition which central. Owner support record upon election.    
  Pattern pick camera benefit. Poor health purpose practice.                      
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⠀⡤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡸⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢠⠃⠀⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠀⢇⠀⡜⢆⡸⠉⠉⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠘⠚⠀⠈⠃⠀⠀⠀⠓⠢⡀⠀⠀⡰⠲⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠒⠚⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠦⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠀⢣⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠀⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  GPXSee not found. Install it to view your gpx
  
  '''
# ---
# name: test_command_show_detail[True-False-True]
  '''
                 Paul Diaz                
   ────────────────────────────────────── 
    ID            1                       
    Date          2023-06-01              
    GPX           ✓                       
    ➡ km          17.4                    
    ⬈ m           3268                    
    ⬊ m           2652                    
    ⏱             03:50                   
    km/h          4.53                    
   ────────────────────────────────────── 
  
  Owner candidate condition which central. Owner support record upon election.    
  Pattern pick camera benefit. Poor health purpose practice.                      
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⠀⡤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡸⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢠⠃⠀⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠀⢇⠀⡜⢆⡸⠉⠉⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠘⠚⠀⠈⠃⠀⠀⠀⠓⠢⡀⠀⠀⡰⠲⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠒⠚⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠦⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠀⢣⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠀⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  Aborting
  
  '''
# ---
# name: test_command_show_detail[True-True-False]
  '''
                 Paul Diaz                
   ────────────────────────────────────── 
    ID            1                       
    Date          2023-06-01              
    GPX           ✓                       
    ➡ km          17.4                    
    ⬈ m           3268                    
    ⬊ m           2652                    
    ⏱             03:50                   
    km/h          4.53                    
   ────────────────────────────────────── 
  
  Owner candidate condition which central. Owner support record upon election.    
  Pattern pick camera benefit. Poor health purpose practice.                      
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⠀⡤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡸⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢠⠃⠀⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠀⢇⠀⡜⢆⡸⠉⠉⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠘⠚⠀⠈⠃⠀⠀⠀⠓⠢⡀⠀⠀⡰⠲⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠒⠚⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠦⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠀⢣⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠀⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  GPXSee not found. Install it to view your gpx
  
  '''
# ---
# name: test_command_show_detail[True-True-True]
  '''
                 Paul Diaz                
   ────────────────────────────────────── 
    ID            1                       
    Date          2023-06-01              
    GPX           ✓                       
    ➡ km          17.4                    
    ⬈ m           3268                    
    ⬊ m           2652                    
    ⏱             03:50                   
    km/h          4.53                    
   ────────────────────────────────────── 
  
  Owner candidate condition which central. Owner support record upon election.    
  Pattern pick camera benefit. Poor health purpose practice.                      
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⠀⡤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡸⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢠⠃⠀⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠀⢇⠀⡜⢆⡸⠉⠉⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠘⠚⠀⠈⠃⠀⠀⠀⠓⠢⡀⠀⠀⡰⠲⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠒⠚⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠦⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠀⢣⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠀⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  
  '''
# ---
# name: test_command_show_list[date-False-daterange0-None-table_style0-plot_params0]
  '''
                                       Hikes                                      
   ────────────────────────────────────────────────────────────────────────────── 
    ID   Date       Name       GPX     ➡ km      ⬈ m      ⬊ m         ⏱     km/h  
   ────────────────────────────────────────────────────────────────────────────── 
     2   2016-05…   Gina         ✗     17.8     2732     3346     03:28     5.12  
                    Lynch                                                         
     1   2023-06…   Paul         ✗     17.4     3268     2652     03:50     4.53  
                    Diaz                                                          
     3   2025-03…   John         ✗     14.9     2452      733     03:17     4.55  
                    Rhodes                                                        
   ────────────────────────────────────────────────────────────────────────────── 
         STATS      3                Σ 50.2   Σ 8452   Σ 6731   Σ 10:36   Σ    -  
                                     ⌀ 16.7   ⌀ 2817   ⌀ 2244   ⌀ 03:32   ⌀ 4.74  
                                     ↑ 17.8   ↑ 3268   ↑ 3346   ↑ 03:50   ↑ 5.12  
                                     ↓ 14.9   ↓ 2452   ↓  733   ↓ 03:17   ↓ 4.53  
   ────────────────────────────────────────────────────────────────────────────── 
  
  '''
# ---
# name: test_command_show_list[date-False-daterange4-Paul-table_style4-plot_params4]
  '''
                                    Hikes                                  
   ─────────────────────────────────────────────────────────────────────── 
    ID   Date         Name        GPX   ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ─────────────────────────────────────────────────────────────────────── 
     1   2023-06-01   Paul Diaz     ✗   17.4   3268   2652   03:50   4.53  
   ─────────────────────────────────────────────────────────────────────── 
  
  '''
# ---
# name: test_command_show_list[date-False-daterange5-FOO-table_style5-plot_params5]
  '''
                                    Hikes                                  
   ─────────────────────────────────────────────────────────────────────── 
    ID   Date         Name        GPX   ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ─────────────────────────────────────────────────────────────────────── 
     1   2023-06-01   Paul Diaz     ✗   17.4   3268   2652   03:50   4.53  
   ─────────────────────────────────────────────────────────────────────── 
  
  '''
# ---
# name: test_command_show_list[distance-True-daterange1-None-table_style1-plot_params1]
  '''
                                       Hikes                                      
  ╔════╦══════════╦══════════╦═════╦════════╦════════╦════════╦═════════╦════════╗
  ║ ID ║ Date     ║ Name     ║ GPX ║   ➡ km ║    ⬈ m ║    ⬊ m ║       ⏱ ║   km/h ║
  ╠════╬══════════╬══════════╬═════╬════════╬════════╬════════╬═════════╬════════╣
  ║  2 ║ 2016-05… ║ Gina     ║   ✗ ║   17.8 ║   2732 ║   3346 ║   03:28 ║   5.12 ║
  ║    ║          ║ Lynch    ║     ║        ║        ║        ║         ║        ║
  ║  1 ║ 2023-06… ║ Paul     ║   ✗ ║   17.4 ║   3268 ║   2652 ║   03:50 ║   4.53 ║
  ║    ║          ║ Diaz     ║     ║        ║        ║        ║         ║        ║
  ║  3 ║ 2025-03… ║ John     ║   ✗ ║   14.9 ║   2452 ║    733 ║   03:17 ║   4.55 ║
  ║    ║          ║ Rhodes   ║     ║        ║        ║        ║         ║        ║
  ╠════╬══════════╬══════════╬═════╬════════╬════════╬════════╬═════════╬════════╣
  ║    ║ STATS    ║ 3        ║     ║ Σ 50.2 ║ Σ 8452 ║ Σ 6731 ║ Σ 10:36 ║ Σ    - ║
  ║    ║          ║          ║     ║ ⌀ 16.7 ║ ⌀ 2817 ║ ⌀ 2244 ║ ⌀ 03:32 ║ ⌀ 4.74 ║
  ║    ║          ║          ║     ║ ↑ 17.8 ║ ↑ 3268 ║ ↑ 3346 ║ ↑ 03:50 ║ ↑ 5.12 ║
  ║    ║          ║          ║     ║ ↓ 14.9 ║ ↓ 2452 ║ ↓  733 ║ ↓ 03:17 ║ ↓ 4.53 ║
  ╚════╩══════════╩══════════╩═════╩════════╩════════╩════════╩═════════╩════════╝
  
  '''
# ---
# name: test_command_show_list[elevation_gain-False-daterange2-None-table_style2-plot_params2]
  '''
                                       Hikes                                      
  ╔════╦══════════╦══════════╦═════╦════════╦════════╦════════╦═════════╦════════╗
  ║ ID ║ Date     ║ Name     ║ GPX ║   ➡ km ║    ⬈ m ║    ⬊ m ║       ⏱ ║   km/h ║
  ╠════╬══════════╬══════════╬═════╬════════╬════════╬════════╬═════════╬════════╣
  ║  3 ║ 2025-03… ║ John     ║   ✗ ║   14.9 ║   2452 ║    733 ║   03:17 ║   4.55 ║
  ║    ║          ║ Rhodes   ║     ║        ║        ║        ║         ║        ║
  ║  2 ║ 2016-05… ║ Gina     ║   ✗ ║   17.8 ║   2732 ║   3346 ║   03:28 ║   5.12 ║
  ║    ║          ║ Lynch    ║     ║        ║        ║        ║         ║        ║
  ║  1 ║ 2023-06… ║ Paul     ║   ✗ ║   17.4 ║   3268 ║   2652 ║   03:50 ║   4.53 ║
  ║    ║          ║ Diaz     ║     ║        ║        ║        ║         ║        ║
  ╠════╬══════════╬══════════╬═════╬════════╬════════╬════════╬═════════╬════════╣
  ║    ║ STATS    ║ 3        ║     ║ Σ 50.2 ║ Σ 8452 ║ Σ 6731 ║ Σ 10:36 ║ Σ    - ║
  ║    ║          ║          ║     ║ ⌀ 16.7 ║ ⌀ 2817 ║ ⌀ 2244 ║ ⌀ 03:32 ║ ⌀ 4.74 ║
  ║    ║          ║          ║     ║ ↑ 17.8 ║ ↑ 3268 ║ ↑ 3346 ║ ↑ 03:50 ║ ↑ 5.12 ║
  ║    ║          ║          ║     ║ ↓ 14.9 ║ ↓ 2452 ║ ↓  733 ║ ↓ 03:17 ║ ↓ 4.53 ║
  ╚════╩══════════╩══════════╩═════╩════════╩════════╩════════╩═════════╩════════╝
    (➡ km)   ^
       18.09 |
       17.91 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       17.74 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⡀⠀⠀⠀⠀⠀⠀⠀
       17.57 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠈⠢⡀⠀⠀⠀⠀⠀
       17.40 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡸⠀⠀⠈⠢⠀⠀⠀⠀
       17.23 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀
       17.06 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀
       16.89 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀
       16.72 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠇⠀⠀⠀⠀⠀⠀⠀⠀
       16.55 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.38 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.20 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.03 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.86 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.69 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.52 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.35 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.18 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.01 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       14.84 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       14.66 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (⏱ )
             | 00:00     00:54     01:48     02:42     03:36    
  
  '''
# ---
# name: test_command_show_list[speed-True-daterange3-None-table_style3-plot_params3]
  '''
                                       Hikes                                      
   ────────────────────────────────────────────────────────────────────────────── 
    ID   Date       Name       GPX     ➡ km      ⬈ m      ⬊ m         ⏱     km/h  
   ────────────────────────────────────────────────────────────────────────────── 
     2   2016-05…   Gina         ✗     17.8     2732     3346     03:28     5.12  
                    Lynch                                                         
     3   2025-03…   John         ✗     14.9     2452      733     03:17     4.55  
                    Rhodes                                                        
     1   2023-06…   Paul         ✗     17.4     3268     2652     03:50     4.53  
                    Diaz                                                          
   ────────────────────────────────────────────────────────────────────────────── 
         STATS      3                Σ 50.2   Σ 8452   Σ 6731   Σ 10:36   Σ    -  
                                     ⌀ 16.7   ⌀ 2817   ⌀ 2244   ⌀ 03:32   ⌀ 4.74  
                                     ↑ 17.8   ↑ 3268   ↑ 3346   ↑ 03:50   ↑ 5.12  
                                     ↓ 14.9   ↓ 2452   ↓  733   ↓ 03:17   ↓ 4.53  
   ────────────────────────────────────────────────────────────────────────────── 
    (➡ km)   ^
       18.09 |
       17.91 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       17.74 | ⠀⠀⠀⠀⢤⠤⣀⣀⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       17.57 | ⠀⠀⠀⠀⠀⠑⠢⡀⠀⠀⠉⠉⠉⠉⠒⠒⠒⠒⠤⠤⠤⢄⣀⣀⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       17.40 | ⠀⠀⠀⠀⠀⠀⠀⠈⠢⢄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠑⠒⠒⠒⠢⠤⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       17.23 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⢄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       17.06 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠢⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.89 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠒⢄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.72 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⢄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.55 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.38 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠑⢄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.20 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.03 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.86 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⢄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.69 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠢⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.52 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⢄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.35 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⢄⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.18 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠢⡀⠀⠀⠀⠀⠀⠀
       15.01 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠒⢄⠀⠀⠀⠀
       14.84 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠀⠀
       14.66 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Date)
             | 07-07     10-02     12-30     03-28     06-24    
  
  '''
# ---
